@@ -25,6 +25,9 @@ IN DEVELOPMENT
     * Convenience method TestCase.expectFailure ensures that known failures
       do not silently pass.  (Aaron Bentley)
 
+    * Transport.local_abspath now raises NotLocalUrl rather than 
+      TransportNotPossible. (Martin Pool, Ian Clatworthy)
+
   BUGFIXES:
 
     * Don't fail bundle selftest if email has 'two' embedded.  
